add archlinux_latest CI build

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ branches:
     - /^v\d+\.\d+(\.\d+)?(-\S*)?$/
 
 env:
+  - OS=archlinux_latest
   - OS=centos_7
   - OS=fedora_23
   - OS=fedora_24
